tests/specs/ecosystem/marvinh/test_shims/0_0_3.test
marvinh/test-shims/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/testing@^0.221.0": "jsr:@std/testing@0.221.0"
    },
    "jsr": {
      "@std/testing@0.221.0": {
        "integrity": "d9b5ed7d5dc4e8d193734a594e7f80c04a5a6f34c2493e69c6713ae7fe6f880e"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: JSR package version manifest for '@std/testing@0.221.0' failed to load: Failed caching 'https://jsr.io/@std/testing/0.221.0_meta.json'.
    at file://<tmpdir>/src/mod.ts:1:37

